--- a/Styling-Components/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/Styling-Components/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -12,6 +12,7 @@
   display: block;
   width: 100%;
   border: 1px solid #ccc;
+  background: white;
   font: inherit;
   line-height: 1.5rem;
   padding: 0 0.25rem;
@@ -21,4 +22,13 @@
   outline: none;
   background: #fad0ec;
   border-color: #8b005d;
+}
+
+.form-control.invalid input {
+  border-color: red;
+  background: #ffd7d7;
+}
+
+.form-control.invalid label {
+  color: red;
 }
